--- a/style.css
+++ b/style.css
@@ -1,7 +1,52 @@
-body{
-    font-family:Roboto;
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0px;
+    margin: 0px;
 }
 
-.header {
+header {
+    display: flex;
+    align-items: center;
     background-color: #1F2937;
+    display: flex;
+    width: 100%;
+    position: sticky;
+    top: 0;
+}
+
+#logo {
+    font-size: 24px;
+    color: #F9FAF8;
+    padding: 20px;
+    margin-right: auto;
+}
+
+#links {
+    display: flex;
+    font-size: 18px;
+    color: #E5E7EB;
+    /* display: flex; */
+    padding: 0px 100px 0px 0px;
+}
+
+.title {
+    font-size: 48px;
+    color: #F9FAF8;
+    font-weight: 900;
+    background-color: #1F2937;
+    height: 1000px;
+}
+
+a {
+    text-decoration: none;
+    color: #E5E7EB;
+    padding: 10px;
+}
+
+a:hover {
+    color: #eb9c0a;
 }
