--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    display: flex;
-    align-items: center;
+    /* display: flex; */
+    /* align-items: center; */
     justify-content: center;
     flex-direction: column;
     padding: 0px;
@@ -29,16 +29,49 @@ header {
     display: flex;
     font-size: 18px;
     color: #E5E7EB;
-    /* display: flex; */
     padding: 0px 100px 0px 0px;
+}
+
+.welcome {
+    display: flex;
+    background-color: #1F2937;
+    padding: 90px;
+    align-items: center;
+    justify-content: center;
+}
+
+.welcome-body {
+    flex-basis: 600px;
+    margin-right: 50px;
 }
 
 .title {
     font-size: 48px;
     color: #F9FAF8;
     font-weight: 900;
-    background-color: #1F2937;
-    height: 1000px;
+    margin: 0px;
+}
+
+.intro {
+    color: #E5E7EB;
+}
+
+.welcome img{
+    width: 400px;
+    height: 250px;
+}
+
+.welcome button {
+    background-color: #3882F6;
+    border: none;
+    color: white;
+    padding: 8px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 8px;
+    font-weight: bold;
 }
 
 a {
