--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ header {
     cursor: pointer;
     border-radius: 8px;
     font-weight: bold;
+    transition: 0.3s ease;
 }
 
 .body {
@@ -138,10 +139,63 @@ header {
     font-size: 18px;
 }
 
+.action {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+}
+
+.action h2 {
+    margin-bottom: 0px;
+}
+
+.action p {
+    margin-top: 4px;
+}
+
+.actionbx{
+    display: flex;
+    align-items: center;
+    background-color: #3882F6;
+    margin: 100px 400px;
+    padding: 20px 80px;
+    border-radius: 8px;
+}
+
+.actionbx button {
+    background-color: #3882F6;
+    border-color: white;
+    border: 2px solid;
+    color: white;
+    padding: 8px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 8px;
+    font-weight: bold;
+    margin-left: 40px;
+    transition: 0.3s ease;
+}
+
+button:hover {
+    opacity: 0.85;
+}
+
 a {
     text-decoration: none;
     color: #E5E7EB;
     padding: 10px;
+}
+
+.footer {
+    display: flex;
+    color: #E5E7EB;
+    background-color: #1F2937;
+    justify-content: center;
+    padding: 20px;
+
 }
 
 a:hover {
